kubernetes/llm/components/llama-cpp-embed/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: llm-embed-svc
  namespace: llm
  labels:
    app.kubernetes.io/name: llm-embed
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: api
      protocol: TCP
      port: 11435
      targetPort: api
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: llm-embed
